--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
 
+    compile "com.google.android.exoplayer:exoplayer:$rootProject.exoplayerVersion"
+
     compile "com.squareup.picasso:picasso:$rootProject.picassoVersion"
 
     compile "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
