--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         </activity>
         <activity android:name=".recipedetail.RecipeDetailActivity">
         </activity>
+        <activity
+            android:name=".recipestepdetail.RecipeStepDetailActivity">
+        </activity>
     </application>
 
 </manifest>
