--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="1c5ace6f3cefaa96123e34bfd85dc3eb36b3a980"
+            />
         <activity android:name=".recipes.RecipesActivity"
                   android:launchMode="singleTop">
             <intent-filter>
